--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="node_modules/lodash/lodash.js"></script>
   <script language="javascript" type="text/javascript" src="bower_components/p5js/lib/p5.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
   <script language="javascript" src="bower_components/p5js/lib/addons/p5.dom.js"></script>
@@ -13,6 +14,9 @@
     html, body {
       padding: 0;
       margin: 0;
+    }
+    input, button {
+        display: block;
     }
   </style>
 </head>
