--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <script language="javascript" src="bower_components/p5js/lib/addons/p5.dom.js"></script>
   <!--<script language="javascript" src="bower_components/p5js/lib/addons/p5.sound.js"></script>-->
   <!-- <script language="javascript" type="text/javascript" src="sketch.js"></script> -->
-  <script language="javascript" type="text/javascript" src="Vehicle.js"></script>
-  <script language="javascript" type="text/javascript" src="steering-behaviors.js"></script>
+  <script language="javascript" type="text/javascript" src="steering/Vehicle.js"></script>
+  <script language="javascript" type="text/javascript" src="steering/steering-behaviors.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style>
     html, body {
